--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 /* Top section container */
 .top-container {
-    background: black;
+    background: grey;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -35,7 +35,7 @@
 }
 
 .brand-logo h1 {
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .nav-links ul {
@@ -50,13 +50,13 @@
 .nav-links ul li a {
     text-decoration: none;
     color: black;
-    font-size: 16px;
+    font-size: 12px;
     font-weight: bold;
     padding: 5px;
 }
 
 .nav-links ul li:first-child a {
-    border-bottom: 2px solid crimson;
+    border-bottom: 2px solid white ;
 }
 
 .nav-btns span {
@@ -67,7 +67,7 @@
 
 /* Main section */
 .main {
-    background-color: #e3e3e3;
+    background-color: light pink;
     height: 90vh;
     display: flex;
     align-items: center;
@@ -86,7 +86,7 @@
     text-transform: uppercase;
     margin-bottom: 15px;
     font-size: 18px;
-    color: crimson;
+    color:  blue;
 }
 
 .left h2 {
@@ -124,12 +124,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    max-width: 400px;
+    max-width: 600px;
 }
 
 .right img {
     width: 100%;
-    max-width: 350px;
+    max-width: 400px;
     height: auto;
     border-radius: 10px;
 }
